<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="if_Command_u" Id="{dba5746c-6304-40f3-b368-7b7194d2e6d6}">
    <Declaration><![CDATA[TYPE if_Command_u :
UNION
    as_word_array : ARRAY[0..63] OF WORD;
    as_struct     : if_Command_t;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>